@startuml CLASSES_SERVICE_PATIENT
title "Diagramme de classes — patient-service"
skinparam classAttributeIconSize 0

class PatientController {
  - patientRegistryService : PatientRegistryService
  + create(request) : PatientResponse
  + getById(id) : PatientResponse
  + search(...) : Page
  + update(id, request) : PatientResponse
}
class AppointmentController {
  - appointmentService : AppointmentService
  + create(patientId, request) : AppointmentResponse
  + cancel(id) : AppointmentResponse
}
class PatientRegistryService {
  - patientRepository : PatientRepository
  - dossierNumberGenerator : DossierNumberGenerator
  + create(request) : PatientResponse
  + search(...) : Page
}
class AppointmentService {
  - appointmentRepository : AppointmentRepository
  + create(patientId, request) : AppointmentResponse
  + cancel(appointmentId) : AppointmentResponse
}
class DossierNumberGenerator {
  + nextDossierNumber() : String
}
class Patient {
  - id : Long
  - dossierNumber : String
  - firstName : String
  - lastName : String
  - birthDate : LocalDate
}
class Appointment {
  - patientId : Long
  - scheduledAt : Instant
  - status : String
}

PatientController --> PatientRegistryService
PatientRegistryService --> Patient
PatientRegistryService --> DossierNumberGenerator
AppointmentController --> AppointmentService
AppointmentService --> Appointment

@enduml
